<resources>
    <string name="app_name">OTPTokenApp</string>
    <string name="auth_prompt">Подтвердите личность!</string>
    <string name="biometric_ready">Биометрия доступна. Пройдите аутентификацию по биометрии!</string>
    <string name="error_biometric_format">Ошибка: %s</string>
    <string name="error_biometric_failed">Ошибка распознавания. Попробуйте снова.</string>
    <string name="dialog_title">Аутентификация отменена</string>
    <string name="dialog_message">Вы хотите повторить попытку или выйти?</string>
    <string name="dialog_retry">Повторить</string>
    <string name="dialog_exit">Выйти</string>
    <string name="register_title">Регистрация OTP-токена</string>
    <string name="register_pin_label">PIN-код:</string>
    <string name="pin_code_placeholder">--------</string>
    <string name="register_copy_button">Копировать PIN-код</string>
    <string name="register_next_button">Далее (ввести key_part)</string>
    <string name="confirm_title">Подтверждение регистрации</string>
    <string name="confirm_key_part_label">Введите key_part (Base32):</string>
    <string name="confirm_key_part_hint">Например: ABCDEFGHIJKLMNOPQRSTUVWXYZ12</string>
    <string name="confirm_button">Подтвердить</string>
    <string name="saving_success">Ключ сохранён. Регистрация завершена.</string>
    <string name="saving_error">Ошибка сохранения: %s</string>
    <string name="otp_title">OTP-токен</string>
    <string name="challenge_hint">Введите challenge</string>
    <string name="generate_otp">Сгенерировать OTP</string>
    <string name="login_success">Подтвердить вход</string>
    <string name="reset_token">Сбросить токен</string>
    <string name="reset_confirm_title">Сброс токена</string>
    <string name="reset_confirm_message">Вы действительно хотите удалить все данные токена? Это действие нельзя отменить.</string>
    <string name="reset_confirm_positive">Да, сбросить</string>
    <string name="reset_confirm_negative">Отмена</string>
    <string name="reset_success">Данные удалены. Приложение будет перезапущено.</string>
    <string name="reset_error">Ошибка при сбросе: %s</string>
    <string name="confirm_login">Подтвердить вход</string>
    <string name="cancel_login">Отмена</string>
    <string name="copy_otp">Копировать OTP</string>
</resources>